force-app/main/default/objects/Farmer_Advisor__c/Farmer_Advisor__c.object-meta.xml
<CustomObject>
    <label>Farmer Advisor</label>
    <nameField>
        <label>Farmer Advisor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Farmer Advisors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>