force-app/main/default/objects/Farmer_Advisor__c/fields/Diploma__c.field-meta.xml
<CustomField>
    <fullName>Diploma__c</fullName>
    <label>Diploma</label>
    <length>50</length>
    <type>Text</type>
</CustomField>