force-app/main/default/objects/Farmer_Advisor__c/fields/Whatsapp__c.field-meta.xml
<CustomField>
    <fullName>Whatsapp__c</fullName>
    <label>Whatsapp</label>
    <type>Phone</type>
</CustomField>